Implement Profile/Activity/Favourite CRUD endpoints and update Swagger
